# Asteroids

./: .gitignore  CMakeLists.txt
include/: AsteroidsConfig.h  AsteroidsConfig.h.in
src/: main.cpp
